--- a/views/base.pug
+++ b/views/base.pug
@@ -26,7 +26,7 @@ html(lang="en")
 
         ul.nav.navbar-nav
           li
-            a(href="/books") Desks
+            a(href="/desks") Desks
 
     .container
       block content
