--- a/views/desks/list.pug
+++ b/views/desks/list.pug
@@ -16,18 +16,18 @@ extends ../base.pug
 block content
   h3 Desks
 
-  a(href="/books/add", class='btn btn-success btn-sm')
+  a(href="/desks/add", class='btn btn-success btn-sm')
     i.glyphicon.glyphicon-plus
     span  Add desk
 
-  each book in books
+  each desk in desks
     .media
-      a(href=`/books/${book.id}`)
+      a(href=`/desks/${desk.id}`)
         .media-body
-          h4= book.title
-          p= book.author
+          h4= desk.name
+          p= desk.vacant
 
-  if !books.length
+  if !desks.length
     p No desks found...
 
   if nextPageToken
