--- a/views/base.pug
+++ b/views/base.pug
@@ -14,7 +14,7 @@
 doctype html
 html(lang="en")
   head
-    title No8 Desk Booking
+    title Ishiki Admin
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
@@ -22,7 +22,7 @@ html(lang="en")
     .navbar.navbar-default
       .container
         .navbar-header
-          .navbar-brand No8 IoT Desk Booking
+          .navbar-brand Ishiki Admin
 
         ul.nav.navbar-nav
           li
