--- a/views/desks/view.pug
+++ b/views/desks/view.pug
@@ -18,12 +18,12 @@ block content
     small
 
   .btn-group
-    a(href=`/desks/${desk.id}/edit`, class='btn btn-primary btn-sm')
-      i.glyphicon.glyphicon-edit
-      span  Edit desk
+    //- a(href=`/desks/${desk.id}/edit`, class='btn btn-primary btn-sm')
+    //-   i.glyphicon.glyphicon-edit
+    //-   span  Edit desk
     a(href=`/desks/${desk.id}/delete`, class='btn btn-danger btn-sm')
-      i.glyphicon.glyphicon-trash
-      span  Delete desk
+      //- i.glyphicon.glyphicon-trash
+      span  Unbook desk
 
   .media
     .media-body
