--- a/views/base.pug
+++ b/views/base.pug
@@ -18,6 +18,8 @@ html(lang="en")
     meta(charset='utf-8')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+    style
+      include style.css
   body
     .navbar.navbar-default
       .container
