--- a/views/desks/view.pug
+++ b/views/desks/view.pug
@@ -21,7 +21,7 @@ block content
     //- a(href=`/desks/${desk.id}/edit`, class='btn btn-primary btn-sm')
     //-   i.glyphicon.glyphicon-edit
     //-   span  Edit desk
-    a(href=`/desks/${desk.id}/delete`, class='btn btn-danger btn-sm')
+    a(href=`/api/desks/${desk.id}/unbook`, class='btn btn-danger btn-sm')
       //- i.glyphicon.glyphicon-trash
       span  Unbook desk
 
