--- a/views/style.css
+++ b/views/style.css
@@ -1,7 +1,7 @@
 .desk-card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
    transition: 0.3s;
-   max-width: 15%;
+   max-width: 18em;
    border-radius: 5px;
 }
 
